fix(): Changed global app style. Removed global center text-align

--- a/antd.customize.less
+++ b/antd.customize.less
@@ -1,1 +1,2 @@
 @primary-color: #461da5;
+@layout-header-background: white;
