--- a/src/components/LayoutWrapper/layout-wrapper.less
+++ b/src/components/LayoutWrapper/layout-wrapper.less
@@ -3,8 +3,8 @@
   background-color: white !important;
 
   &--header {
-    background-color: #c1c1c1 !important;
     color: black;
+    border-bottom: 1px solid #d4d4d4;
 
     &__stick {
       position: sticky;
